--- a/device_info_pod/device_info_pod_flutter/pubspec.yaml
+++ b/device_info_pod/device_info_pod_flutter/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  device_info_plus: ^4.1.2
+  hooks_riverpod: ^1.0.4
   device_info_pod_client:
     path: ../device_info_pod_client
 
